fixed spacing on show page styling and added a confirmation alert for the mailer button

--- a/app/assets/stylesheets/components/_instance_show.scss
+++ b/app/assets/stylesheets/components/_instance_show.scss
@@ -3,12 +3,15 @@
   border: 1px solid #c1c1c1;
   padding: 15px;
   border-radius: 20px;
+  p {
+    margin-bottom: 0.2em;
+  }
 }
 
 .show-card {
-  width: 400px;
+  width: 500px;
 }
 
 .send-mail {
-  width: 400px;
+  width: 500px;
 }
